--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Archiduchesse::Chaussettes Made in France dans 48 couleurs!-Archiduchesse</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="icon" href="favicon.ico">
         <!-- Place favicon.ico in the root directory -->
-
+        <!-- <link rel="stylesheet" href="http://getbootstrap.com/components/#glyphicons"> -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.css">
@@ -17,22 +17,86 @@
     </head>
     <body>
 
+     <header>
+       <div id="mySidenav" class="sidenav">
+         <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+       </div>
+      <nav class="navheader">
+       <ul class="menu">
+        <li><a href="#">De ville</a></li>
+        <li><a href="#">De luxe</a></li>
+        <li><a href="#">Bouclette</a></li>
+        <li><a href="#">Fantaisie</a><li>
+        <li><a href="#">Socquette</a></li>
+        <li><a href="#">Collant</a></li>
+        <li><a href="#">Courte</a></li>
+        <li><a href="#">Espadrilles</a></li>
+       </ul>
+      </nav>
 
+      <img class="logo" src="img/logo.svg" alt="logo archiduchess">
+      <img class="panier" src="img/panier.svg" alt="panier">
+     </header>
 
 
+    <div class="img col-xs-12">
+     <img src="img/rouge-maison-close.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+     <img src="img/rose-framboise.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
 
+     <img src="img/rose-panthere.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+     <img src="img/rose-petite-fille.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
 
+     <img src="img/aubergine.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+     <img src="img/mauve-mure.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
 
+     <img src="img/juste-mauve.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+     <img src="img/chaussettes-violet-violine.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
 
+     <img src="img/ultra-violet.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+     <img src="img/violet-violette.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
 
+     <img src="img/bleu-ligne-13.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+     <img src="img/bleu-petit-garcon.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
 
+   </div>
 
 
+  <footer>
+  <section>
 
+    <figure>
+     <img src="img/poulet.png" alt="">
+     <figcaption>Fabrication Française</figcaption>
+    </figure>
 
+    <figure>
+     <img src="img/paypal.png" alt="">
+     <figcaption>Paiement Sécurisé</figcaption>
+    </figure>
 
+    <figure>
+     <img src="img/livraison.png" alt="">
+     <figcaption>Livraison 48/72h</figcaption>
+    </figure>
 
+    <figure>
+     <img src="img/maison.png" alt="">
+     <figcaption>38, rue Michelet 42000 Saint-Etienne 04.27.81.58.70</figcaption>
+   </figure>
 
+ <nav>
+  <ul>
+    <li><a href="#">Webdesign et Développement par Axome - Motorisé sous Prestashop</a></li>
+    <li><a href="#">
+      <label for="news">Newsletter</label>
+      <input name="news" value="" id="news" placeholder="votre email" type="text">
+      <input name="" value="OK" type="submit">
+    </a></li>
+    <li><a href="#">Nos passionnantes Conditions Générales de Vente</a></li>
+  </ul>
+ </nav>
+</section>
+  </footer>
 
 
 
@@ -113,13 +177,15 @@
 
 
 
-      
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+
+
+
+
+
+
+
+
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
@@ -135,6 +201,7 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
+
         <script src="js/bootstrap.js"></script>
     </body>
 </html>
