index.html: skeleton of home page

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 
         <link rel="icon" href="favicon.ico">
         <!-- Place favicon.ico in the root directory -->
-        <!-- <link rel="stylesheet" href="http://getbootstrap.com/components/#glyphicons"> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/style.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
 
      <header>
        <div id="mySidenav" class="sidenav">
-         <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+         <i class="fa fa-bars" aria-hidden="true"></i>
        </div>
       <nav class="navheader">
        <ul class="menu">
@@ -62,7 +63,6 @@
 
 
   <footer>
-  <section>
 
     <figure>
      <img src="img/poulet.png" alt="">
@@ -95,7 +95,7 @@
     <li><a href="#">Nos passionnantes Conditions Générales de Vente</a></li>
   </ul>
  </nav>
-</section>
+
   </footer>
 
 
