working on header

--- a/index.html
+++ b/index.html
@@ -18,22 +18,105 @@
     </head>
     <body>
 
-     <header>
-       <div id="mySidenav" class="sidenav">
-         <i class="fa fa-bars" aria-hidden="true"></i>
-       </div>
-      <nav class="navheader">
-       <ul class="menu">
-        <li><a href="#">De ville</a></li>
-        <li><a href="#">De luxe</a></li>
-        <li><a href="#">Bouclette</a></li>
-        <li><a href="#">Fantaisie</a><li>
-        <li><a href="#">Socquette</a></li>
-        <li><a href="#">Collant</a></li>
-        <li><a href="#">Courte</a></li>
-        <li><a href="#">Espadrilles</a></li>
-       </ul>
-      </nav>
+      <!-- ==========================================================================
+                        Start of header
+     ========================================================================== -->
+         <section class="backgroundheader">
+
+
+             <header>
+
+
+                 <aside class="logo">
+                     <figure>
+                         <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+                         <a href="index.html"><img src="img/logo.svg" alt=""></a>
+                         <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
+
+                     </figure>
+                 </aside>
+
+                 <nav class="mainnav">
+                     <ul>
+                         <li><a href="">Shop</a></li>
+                         <li><a href="blog.html">Blog</a></li>
+                         <li><a href="">Info</a></li>
+                         <li><a href="">Atelier</a></li>
+                     </ul>
+                 </nav>
+
+                 <div class="panier">
+                     <select name="lang">
+                   <option value="FR">FR</option>
+                   <option value="EN">EN</option>
+                 </select>
+                     <p>Bienvenue , <a href="#">Connexion</a></p>
+                     <section class="productpanier">
+                         <p>0</p>
+                         <p>Produit dans <a href="#">Mon panier</a><br> Frais de port offerts dans 42€</p>
+                     </section>
+                 </div>
+
+                 <nav class="navchausette">
+                     <ul>
+                         <li>
+                             <a href="">
+                                 <figure>
+                                   <img src="img/deville.svg" alt="Logo de chausette de ville">
+                                 </figure>
+                                 <p><span>De ville </span><br> Lisse & haute</p>
+                             </a>
+                         </li>
+                         <li>
+                             <a href="">
+                                 <figure><img src="img/deluxe.svg" alt="Logo de chausette de luxe"></figure>
+                                 <p><span>De luxe</span> <br> Mi-bas FIl d'ecosse</p>
+                             </a>
+
+                         </li>
+                         <li>
+                             <a href="">
+                                 <figure><img src="img/bouclette.svg" alt="Logo de chausette de bouclette"></figure>
+                                 <p><span>Bouclette</span> <br> Douce & chaude</p>
+                             </a>
+                         </li>
+                         <li>
+                             <a href="">
+                                 <figure><img src="img/fantaisie.svg" alt="Logo de chausette de fantaisie"></figure>
+                                 <p><span>fantaisie</span> <br> drôle de chausette</p>
+                             </a>
+                         </li>
+                         <li>
+                             <a href="">
+                                 <figure><img src="img/soquettes.svg" alt="Logo de chausette socquette"></figure>
+                                 <p> <span>socquette</span> <br> Courte & fine</p>
+                             </a>
+                         </li>
+                         <li>
+                             <a href="">
+                                 <figure><img src="img/collants.svg" alt="Logo de collant pour femme"></figure>
+                                 <p><span>Collant</span> <br> Pour femme</p>
+                             </a>
+                         </li>
+                     </ul>
+                 </nav>
+             </header>
+
+         </section>
+
+
+         <!-- ==========================================================================
+                        End of header
+     ========================================================================== -->
+
+
+
+
+
+
+
+
+
 
       <img class="logo" src="img/logo.svg" alt="logo archiduchess">
       <img class="panier" src="img/panier.svg" alt="panier">
