rewrite the main with images+work on his position

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                      <figure>
                          <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
                          <a href="index.html"><img src="img/logo.svg" alt=""></a>
-                         <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
-
+                         <img id="panier" src="img/panier.svg" alt="logo panier">
                      </figure>
                  </aside>
 
@@ -109,18 +108,6 @@
                         End of header
      ========================================================================== -->
 
-
-
-
-
-
-
-
-
-
-      <img class="logo" src="img/logo.svg" alt="logo archiduchess">
-      <img class="panier" src="img/panier.svg" alt="panier">
-     </header>
 
 
     <div class="img col-xs-12">
