working on footer

--- a/index.html
+++ b/index.html
@@ -132,41 +132,54 @@
    </div>
 
 
-  <footer>
+   <!--~~~~~~~~~~~~~~~~~~~~~~~start of footer~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-    <figure>
-     <img src="img/poulet.png" alt="">
-     <figcaption>Fabrication Française</figcaption>
-    </figure>
+     <footer>
 
-    <figure>
-     <img src="img/paypal.png" alt="">
-     <figcaption>Paiement Sécurisé</figcaption>
-    </figure>
+         <article>
+             <figure><img src="img/poulet.png" alt=""></figure>
+             <h5>Fabrication Francaise</h5>
+         </article>
 
-    <figure>
-     <img src="img/livraison.png" alt="">
-     <figcaption>Livraison 48/72h</figcaption>
-    </figure>
+         <article>
+             <figure><img src="img/paypal.png" alt=""></figure>
+             <h5>Paiement securise</h5>
+         </article>
 
-    <figure>
-     <img src="img/maison.png" alt="">
-     <figcaption>38, rue Michelet 42000 Saint-Etienne 04.27.81.58.70</figcaption>
-   </figure>
+         <article>
+             <figure><img src="img/livraison.png" alt=""></figure>
+             <h5>Livraison 48/72h</h5>
+         </article>
 
- <nav>
-  <ul>
-    <li><a href="#">Webdesign et Développement par Axome - Motorisé sous Prestashop</a></li>
-    <li><a href="#">
-      <label for="news">Newsletter</label>
-      <input name="news" value="" id="news" placeholder="votre email" type="text">
-      <input name="" value="OK" type="submit">
-    </a></li>
-    <li><a href="#">Nos passionnantes Conditions Générales de Vente</a></li>
-  </ul>
- </nav>
+         <article>
+             <figure><img src="img/maison.png" alt=""></figure>
+             <h5>38 rue Michelet 42000 Saint Etienne, France</h5>
+         </article>
 
-  </footer>
+         <article class="face">
+             <figure><img src="img/facebook.png" alt=""></figure>
+             <h5>Facebook plus de 20 000 pouces en l'air</h5>
+         </article>
+
+
+         <article class="twitter">
+             <figure><img src="img/twitter.png" alt=""></figure>
+             <h5>Twitter 4391 Followers</h5>
+         </article>
+
+         <nav>
+             <ul>
+                 <li>Webdesign et Developpement par Axome - Motorise sous Prestashop</li>
+                  <li><label></label>Newsletter</li>
+                 <li><input type="text" placeholder="votre email" value=""><button type="button" name="button">ok</button></li>
+                 <li>Nos passionnantes Conditions Generales de Vente</li>
+             </ul>
+         </nav>
+
+
+
+     </footer>
+
 
 
 
