begin the work on media query for desktop

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
              <header>
 
-
                  <aside class="logo">
                      <figure>
                          <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
@@ -110,7 +109,7 @@
 
 
 
-    <div class="img col-xs-12">
+    <div>
      <img src="img/rouge-maison-close.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
      <img src="img/rose-framboise.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
 
