finish the header for desktop

--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
                         End of header
      ========================================================================== -->
 
+             <h1>Chausettes de ville</h1>
+             <aside class="chausettesize">
+                 <ul>
+                     <li><a href="">Toutes</a></li>
+                     <li><a href="">31/35</a></li>
+                     <li><a href="">36/41</a></li>
+                     <li><a href="">42/46</a></li>
+                     <li><a href="">15/18</a></li>
+                     <li><a href="">19/22</a></li>
+                     <li><a href="">23/26</a></li>
+                     <li><a href="">27/30</a></li>
+                 </ul>
+     </aside>
 
 
     <div>
