index.html: check indentation+alt

--- a/index.html
+++ b/index.html
@@ -21,265 +21,174 @@
       <!-- ==========================================================================
                         Start of header
      ========================================================================== -->
-         <section class="backgroundheader">
+   <section class="backgroundheader">
+    <header>
 
 
-             <header>
+        <aside class="logo">
+          <figure>
+           <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+           <a href="index.html"><img src="../img/logo.svg" alt="logo archi"></a>
+           <img id="panier" src="../img/panier.svg" alt="logo panier">
+           </figure>
+        </aside>
 
-                 <aside class="logo">
-                     <figure>
-                         <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
-                         <a href="index.html"><img src="img/logo.svg" alt=""></a>
-                         <img id="panier" src="img/panier.svg" alt="logo panier">
-                     </figure>
-                 </aside>
+        <nav class="mainnav">
+           <ul>
+             <li><a href="">Shop</a></li>
+             <li><a href="blog.html">Blog</a></li>
+             <li><a href="">Info</a></li>
+             <li><a href="">Atelier</a></li>
+            </ul>
+        </nav>
 
-                 <nav class="mainnav">
-                     <ul>
-                         <li><a href="">Shop</a></li>
-                         <li><a href="blog.html">Blog</a></li>
-                         <li><a href="">Info</a></li>
-                         <li><a href="">Atelier</a></li>
-                     </ul>
-                 </nav>
+        <div class="panier">
+          <select name="lang">
+           <option value="FR">FR</option>
+           <option value="EN">EN</option>
+          </select>
+          <p>Bienvenue , <a href="#">Connexion</a></p>
+          <section class="productpanier">
+            <p>0</p>
+            <p>Produit dans <a href="#">Mon panier</a><br> Frais de port offerts dans 42€</p>
+          </section>
+        </div>
 
-                 <div class="panier">
-                     <select name="lang">
-                   <option value="FR">FR</option>
-                   <option value="EN">EN</option>
-                 </select>
-                     <p>Bienvenue , <a href="#">Connexion</a></p>
-                     <section class="productpanier">
-                         <p>0</p>
-                         <p>Produit dans <a href="#">Mon panier</a><br> Frais de port offerts dans 42€</p>
-                     </section>
-                 </div>
+        <nav class="navchausette">
+          <ul>
+            <li>
+             <a href="">
+              <figure>
+              <img src="../img/deville.svg" alt="chausette">
+              </figure>
+              <p><span>De ville </span><br> Lisse & haute</p>
+             </a>
+            </li>
+            <li>
+             <a href="">
+              <figure><img src="../img/deluxe.svg" alt="chausette"></figure>
+              <p><span>De luxe</span> <br> Mi-bas FIl d'ecosse</p>
+             </a>
+            </li>
+            <li>
+             <a href="">
+              <figure><img src="../img/bouclette.svg" alt="chausette"></figure>
+              <p><span>Bouclette</span> <br> Douce & chaude</p>
+             </a>
+            </li>
+            <li>
+             <a href="">
+              <figure><img src="../img/fantaisie.svg" alt="chausette"></figure>
+              <p><span>fantaisie</span> <br> drôle de chausette</p>
+             </a>
+            </li>
+            <li>
+             <a href="">
+              <figure><img src="../img/soquettes.svg" alt="chausette"></figure>
+              <p> <span>socquette</span> <br> Courte & fine</p>
+             </a>
+            </li>
+            <li>
+             <a href="">
+              <figure><img src="../img/collants.svg" alt="collant"></figure>
+              <p><span>Collant</span> <br> Pour femme</p>
+             </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-                 <nav class="navchausette">
-                     <ul>
-                         <li>
-                             <a href="">
-                                 <figure>
-                                   <img src="img/deville.svg" alt="Logo de chausette de ville">
-                                 </figure>
-                                 <p><span>De ville </span><br> Lisse & haute</p>
-                             </a>
-                         </li>
-                         <li>
-                             <a href="">
-                                 <figure><img src="img/deluxe.svg" alt="Logo de chausette de luxe"></figure>
-                                 <p><span>De luxe</span> <br> Mi-bas FIl d'ecosse</p>
-                             </a>
-
-                         </li>
-                         <li>
-                             <a href="">
-                                 <figure><img src="img/bouclette.svg" alt="Logo de chausette de bouclette"></figure>
-                                 <p><span>Bouclette</span> <br> Douce & chaude</p>
-                             </a>
-                         </li>
-                         <li>
-                             <a href="">
-                                 <figure><img src="img/fantaisie.svg" alt="Logo de chausette de fantaisie"></figure>
-                                 <p><span>fantaisie</span> <br> drôle de chausette</p>
-                             </a>
-                         </li>
-                         <li>
-                             <a href="">
-                                 <figure><img src="img/soquettes.svg" alt="Logo de chausette socquette"></figure>
-                                 <p> <span>socquette</span> <br> Courte & fine</p>
-                             </a>
-                         </li>
-                         <li>
-                             <a href="">
-                                 <figure><img src="img/collants.svg" alt="Logo de collant pour femme"></figure>
-                                 <p><span>Collant</span> <br> Pour femme</p>
-                             </a>
-                         </li>
-                     </ul>
-                 </nav>
-             </header>
-
-         </section>
+    </section>
 
 
-         <!-- ==========================================================================
+<!-- ==========================================================================
                         End of header
-     ========================================================================== -->
+========================================================================= -->
 
-             <h1>Chausettes de ville</h1>
-             <aside class="chausettesize">
-                 <ul>
-                     <li><a href="">Toutes</a></li>
-                     <li><a href="">31/35</a></li>
-                     <li><a href="">36/41</a></li>
-                     <li><a href="">42/46</a></li>
-                     <li><a href="">15/18</a></li>
-                     <li><a href="">19/22</a></li>
-                     <li><a href="">23/26</a></li>
-                     <li><a href="">27/30</a></li>
-                 </ul>
+    <h1>Chausettes de ville</h1>
+      <aside class="chausettesize">
+       <ul>
+        <li><a href="">Toutes</a></li>
+        <li><a href="">31/35</a></li>
+        <li><a href="">36/41</a></li>
+        <li><a href="">42/46</a></li>
+        <li><a href="">15/18</a></li>
+        <li><a href="">19/22</a></li>
+        <li><a href="">23/26</a></li>
+        <li><a href="">27/30</a></li>
+      </ul>
      </aside>
 
 
-    <div>
-     <img src="img/rouge-maison-close.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
-     <img src="img/rose-framboise.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+     <div>
+      <img src="img/rouge-maison-close.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
+      <img src="img/rose-framboise.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
 
-     <img src="img/rose-panthere.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
-     <img src="img/rose-petite-fille.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+      <img src="img/rose-panthere.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
+      <img src="img/rose-petite-fille.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
 
-     <img src="img/aubergine.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
-     <img src="img/mauve-mure.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+      <img src="img/aubergine.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
+      <img src="img/mauve-mure.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
 
-     <img src="img/juste-mauve.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
-     <img src="img/chaussettes-violet-violine.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+      <img src="img/juste-mauve.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
+      <img src="img/chaussettes-violet-violine.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
 
-     <img src="img/ultra-violet.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
-     <img src="img/violet-violette.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+      <img src="img/ultra-violet.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
+      <img src="img/violet-violette.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
 
-     <img src="img/bleu-ligne-13.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
-     <img src="img/bleu-petit-garcon.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="...">
+      <img src="img/bleu-ligne-13.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
+      <img src="img/bleu-petit-garcon.jpg" class="col-xs-6 col-sm-4 col-lg-3" alt="chaussette">
 
-   </div>
+     </div>
 
 
-   <!--~~~~~~~~~~~~~~~~~~~~~~~start of footer~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+<!--=================FOOTER==============================-->
 
-     <footer>
+  <footer>
 
-         <article>
-             <figure><img src="img/poulet.png" alt=""></figure>
-             <h5>Fabrication Francaise</h5>
-         </article>
+   <article>
+    <figure><img src="../img/poulet.png" alt="logo poulet"></figure>
+    <h5>Fabrication Francaise</h5>
+   </article>
 
-         <article>
-             <figure><img src="img/paypal.png" alt=""></figure>
-             <h5>Paiement securise</h5>
-         </article>
+   <article>
+    <figure><img src="../img/paypal.png" alt="logo paypal"></figure>
+    <h5>Paiement securise</h5>
+   </article>
 
-         <article>
-             <figure><img src="img/livraison.png" alt=""></figure>
-             <h5>Livraison 48/72h</h5>
-         </article>
+   <article>
+    <figure><img src="../img/livraison.png" alt="logo livraison"></figure>
+    <h5>Livraison 48/72h</h5>
+   </article>
 
-         <article>
-             <figure><img src="img/maison.png" alt=""></figure>
-             <h5>38 rue Michelet 42000 Saint Etienne, France</h5>
-         </article>
+   <article>
+    <figure><img src="../img/maison.png" alt="logo maison"></figure>
+    <h5>38 rue Michelet 42000 Saint Etienne, France</h5>
+   </article>
 
-         <article class="face">
-             <figure><img src="img/facebook.png" alt=""></figure>
-             <h5>Facebook plus de 20 000 pouces en l'air</h5>
-         </article>
+   <article class="face">
+    <figure><img src="../img/facebook.png" alt="logo facebook"></figure>
+    <h5>Facebook plus de 20 000 pouces en l'air</h5>
+   </article>
 
 
-         <article class="twitter">
-             <figure><img src="img/twitter.png" alt=""></figure>
-             <h5>Twitter 4391 Followers</h5>
-         </article>
+   <article class="twitter">
+    <figure><img src="../img/twitter.png" alt="logo twitter"></figure>
+    <h5>Twitter 4391 Followers</h5>
+   </article>
 
-         <nav>
-             <ul>
-                 <li>Webdesign et Developpement par Axome - Motorise sous Prestashop</li>
-                  <li><label></label>Newsletter</li>
-                 <li><input type="text" placeholder="votre email" value=""><button type="button" name="button">ok</button></li>
-                 <li>Nos passionnantes Conditions Generales de Vente</li>
-             </ul>
-         </nav>
+   <nav>
+    <ul>
+     <li>Webdesign et Developpement par Axome - Motorise sous Prestashop</li>
+     <li><label></label>Newsletter</li>
+     <li><input type="text" placeholder="votre email" value=""><button type="button" name="button">ok</button></li>
+     <li>Nos passionnantes Conditions Generales de Vente</li>
+    </ul>
+   </nav>
 
+</footer>
 
-
-     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!--============END FOOTER===============-->
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
